[gd_scene load_steps=5 format=3 uid="uid://biocmi743oipl"]

[ext_resource type="PackedScene" uid="uid://bxelo41vclqw0" path="res://scenes/placeable_area.tscn" id="1_g81ut"]
[ext_resource type="Script" path="res://scripts/player_cards.gd" id="2_8r5wt"]
[ext_resource type="Script" path="res://scenes/board.gd" id="3_cu4ck"]
[ext_resource type="PackedScene" uid="uid://bmfwrtih5tgvl" path="res://scenes/test.tscn" id="3_omlem"]

[node name="main" type="Node2D"]
script = ExtResource("2_8r5wt")

[node name="CardLayer" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="player cards" type="Node2D" parent="."]
script = ExtResource("2_8r5wt")

[node name="placeable area5" parent="player cards" instance=ExtResource("1_g81ut")]
position = Vector2(134, 755)

[node name="placeable area4" parent="player cards" instance=ExtResource("1_g81ut")]
position = Vector2(134, 588)

[node name="placeable area3" parent="player cards" instance=ExtResource("1_g81ut")]
position = Vector2(134, 421)

[node name="placeable area2" parent="player cards" instance=ExtResource("1_g81ut")]
position = Vector2(134, 254)

[node name="placeable area" parent="player cards" instance=ExtResource("1_g81ut")]
position = Vector2(134, 86)

[node name="Node2D" type="Node2D" parent="."]
script = ExtResource("3_cu4ck")

[node name="Label" parent="Node2D" instance=ExtResource("3_omlem")]
offset_left = 1124.0
offset_top = 84.0
offset_right = 1198.0
offset_bottom = 107.0
metadata/_edit_use_anchors_ = true

[node name="Label2" parent="Node2D" instance=ExtResource("3_omlem")]
offset_left = 1124.0
offset_top = 251.0
offset_right = 1198.0
offset_bottom = 300.0
metadata/_edit_use_anchors_ = true

[node name="Label3" parent="Node2D" instance=ExtResource("3_omlem")]
offset_left = 1124.0
offset_top = 418.0
offset_right = 1198.0
offset_bottom = 467.0
metadata/_edit_use_anchors_ = true

[node name="Label4" parent="Node2D" instance=ExtResource("3_omlem")]
offset_left = 1124.0
offset_top = 585.0
offset_right = 1198.0
offset_bottom = 634.0
metadata/_edit_use_anchors_ = true

[node name="Label5" parent="Node2D" instance=ExtResource("3_omlem")]
offset_left = 1124.0
offset_top = 752.0
offset_right = 1198.0
offset_bottom = 801.0
metadata/_edit_use_anchors_ = true

[node name="FinalLabel" type="Label" parent="Node2D"]
offset_left = 1139.0
offset_top = 856.0
offset_right = 1193.0
offset_bottom = 879.0
text = "yayaya"
